--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".eleventy.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ELEVENTY_ENV=prod eleventy",
+    "build": "npm run generate && ELEVENTY_ENV=prod eleventy",
     "generate": "node scripts/generateSiteData.mjs",
     "watch": "eleventy --watch",
     "serve": "eleventy --serve",
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "axios": "^1.3.3",
     "clean-css": "^5.3.2",
     "unfurl.js": "^6.1.0"
   }
